# napari-cell-gater

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Testing_channl_indexing.ipynb  gates.csv  pyproject.toml  scratch  setup.cfg  testing_log_scatter.ipynb  tox.ini
src/cell_gater/: __init__.py  __main__.py  _reader.py  _sample_data.py  _writer.py  napari.yaml
src/cell_gater/_tests/: _test_sample_widget.py  test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
src/cell_gater/model/: data_model.py
src/cell_gater/utils/: csv_df.py  misc.py
src/cell_gater/widgets/: sample_widget.py  scatter_widget.py
tracebacks/: bug1
