[metadata]
name = napari-cell-gater
url = https://github.com/melonora/napari-cell-gater.git
Bug Tracker = https://github.com/melonora/napari-cell-gater/issues
Documentation = https://github.com/melonora/napari-cell-gater#README.md
Source Code = https://github.com/melonora/napari-cell-gater
User Support = https://github.com/melonora/napari-cell-gater/issues

description = A plugin to perform cell marker gating for multiplexed immunofluorescent imaging
long_description = file: README.md
long_description_content_type = text/markdown

author = Wouter-Michiel Vierdag
author_email = w-mv@hotmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing


[options]
packages = find:
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy
    magicgui
    qtpy
    scikit-image
    loguru
    napari
    dask-image
    qtpy
    matplotlib
    pandas
    napari

[options.packages.find]
where = src

[options.extras_require]
test =
    loguru
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    pre-commit

all =
    PyQt5

[options.package_data]
* = napari.yaml

[options.entry_points]
napari.manifest =
    napari-cell-gater = cell_gater:napari.yaml
console_scripts =
    spatialdata = cell_gater.__main__:main
